[package]
name = "bitcoin_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
byteorder = "1.4"
sha2 = "0.10"
md5 = "0.7"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10.1"
bytes = "1.6.0"
bb8 = "0.8.5"
bb8-postgres = "0.8.1"