[package]
name = "bitcoin_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
hex = "0.4"
byteorder = "1.4"
sha2 = "0.10"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.6.0"
num-bigint = "0.4"
num-traits = "0.2"