[package]
name = "bitcoin_postgres_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
byteorder = "1.4"
bytes = "1.6.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
hex = "0.4"
rayon = "1.5"
sha2 = "0.10"
time = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
